# goit-python-web-13.2-hw

./: LICENSE  pyproject.toml
hw_project10/: settings.py
quotes/: views.py
